# talos_bootstrapper

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: build-image.yml  checks.yaml
containers/: Dockerfile  Taskfile.yml
examples/: config.yaml
src/porcupine/: cli.py  common.py  config.py  logic.py  server.py  webapp.py
tests/: test_main.py
