[tool.black]
line-length = 180

[tool.flake8]
max-line-length = 172
ignore = "E203"

[tool.poetry]
name = "porcupine"
version = "0.1.0"
description = "Talos Linux Bootstrapper"
authors = ["Manuel Bovo <manuel.bovo@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.2"
colorama = "^0.4.4"
loguru = "^0.6.0"
gevent = "^21.12.0"
PyYAML = "^6.0"
urllib3 = "^1.26.9"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
pydantic-yaml = "^0.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
flake8 = "^4.0.1"
pylint = "^2.12.2"
autopep8 = "^1.6.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
porcupine = "porcupine.cli:main"
